--- a/index.html
+++ b/index.html
@@ -28,29 +28,56 @@
     <section id="header" class="jumbotron text-center">
       <h1 class="display-3">LEAVES</h1>
       <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro nobis, nesciunt ducimus inventore nihil eaque harum.</p>
-      <a href="" class="btn btn-success">Button #1</a>
-      <a href="" class="btn btn-info">Button #2</a>
+      <a href="" class="btn btn-success">Link 1</a>
+      <a href="" class="btn btn-info">Link 2</a>
     </section>
 
     <section id="gallery">
       <div class="container">
-        <div class="card">
-          <img class="card-img-top" src="./imgs/beauty-red.jpg" alt="Beautiful Red Flowers">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+        <div class="row">
+
+          <!-- First card -->
+          <div class="col-lg-4 mb-3">
+            <div class="card">
+              <img class="card-img-top" src="./imgs/beauty-red.jpg" alt="Beautiful Red Flowers">
+              <div class="card-body">
+                <h5 class="card-title">First Thing</h5>
+                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi ad odit accusantium aut quam saepe animi a distinctio fuga iure?</p>
+                <a href="" class="btn btn-outline-success btn-sm">Download</a>
+                <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a>
+              </div>
+            </div>
           </div>
+
+          <!-- Second card -->
+          <div class="col-lg-4 mb-3">
+            <div class="card">
+              <img class="card-img-top" src="./imgs/green-red-plant.jpg" alt="Beautiful Green Leaves">
+              <div class="card-body">
+                <h5 class="card-title">First Thing</h5>
+                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi ad odit accusantium aut quam saepe animi a distinctio fuga iure?</p>
+                <a href="" class="btn btn-outline-success btn-sm">Download</a>
+                <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Third card -->
+          <div class="col-lg-4 mb-4">
+            <div class="card">
+              <img class="card-img-top" src="./imgs/purp-green.jpg" alt="Beautiful Purple Leaves">
+              <div class="card-body">
+                <h5 class="card-title">First Thing</h5>
+                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi ad odit accusantium aut quam saepe animi a distinctio fuga iure?</p>
+                <a href="" class="btn btn-outline-success btn-sm">Download</a>
+                <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
     </section>
-
-    <div class="card" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
